Fix alignment for header and container-one
- Changed header justify-content: space-evenly --> space-around
- fixed .logo --> ..logo h1 so font-size:24px displayed correctly
- fixed margins in body of container-one
- fixed padding and font size for sign-up button element
- added gap between body and placeholder

--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,12 @@
     background-color: #1f2937;
     display: flex;
     /* may change justify content around to match img better */
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     padding: 8px;
 }
 
-.logo {
+.logo h1 {
     font-size: 24px;
     color: #F9FAF8;
 }
@@ -45,7 +45,8 @@ a {
 .container-one {
     display: flex;
     background-color: #1f2937;
-    padding: 100px 200px;
+    padding: 100px 250px;
+    gap: 50px;
 }
 
 .body {
@@ -65,16 +66,23 @@ a {
 .hero-main {
     font-size:48px;
     font-weight: 800;
-    color:#F9FAF8
+    color:#F9FAF8;
+}
+
+.hero-main,
+.hero-secondary,
+.sign-up {
+    margin: 4px 0;
 }
 
 .sign-up {
     background-color: #3882f6;
     border: 1px solid #3882f6;
     color:#F9FAF8;
+    font-size: 1.15em;
     font-weight: 600;
     border-radius: 6px;
-    padding: 8px 32px;
+    padding: 8px 36px;
     align-self: flex-start;
 }
 
@@ -135,6 +143,7 @@ a {
     color: #1f2937;
     font-size: 1.5em;
     font-weight: 600;
+    text-align: end;
 }
 
 .container-four {
